pkg/provider/kubernetes/ingress/fixtures/Ingress-with-empty-pathType.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ""
  namespace: testing
  annotations:
    traefik.ingress.kubernetes.io/router.pathmatcher: Path
spec:
  rules:
  - http:
      paths:
      - path: /bar
        pathType: ""
        backend:
          service:
            name: service1
            port:
              number: 80

---
kind: Service
apiVersion: v1
metadata:
  name: service1
  namespace: testing

spec:
  ports:
    - port: 80
  clusterIP: 10.0.0.1

---
kind: Endpoints
apiVersion: v1
metadata:
  name: service1
  namespace: testing

subsets:
  - addresses:
      - ip: 10.10.0.1
    ports:
      - port: 8080

---
kind: EndpointSlice
apiVersion: discovery.k8s.io/v1
metadata:
  name: service1-abc
  namespace: testing
  labels:
    kubernetes.io/service-name: service1

addressType: IPv4
ports:
  - port: 8080
    name: ""
endpoints:
  - addresses:
      - 10.10.0.1
    conditions:
      ready: true
